# image_steganography

./: CMakeLists.txt  README.md  main.cpp
bmpFile/: Header.cpp  Header.hpp  HeaderInfo.cpp  HeaderInfo.hpp  bmpFile.cpp  bmpFile.hpp
flag_functions/: flag_funcs.cpp  flag_funcs.hpp
pixel/: Pixel.cpp  Pixel.hpp
ppmFile/: ppmFile.cpp  ppmFile.hpp
validation_functions/: validation_funcs.cpp  validation_funcs.hpp
